tests/testdata/positive/func_void.go
package main
func greet(name string) {
  fmt.Println("Hello", name);
}
func main() {
  greet("World");
  greet("Go");
}
