tests/testdata/negative/return_type_mismatch.go
package main
func getInt() int {
  return true;
}
func main() {
  fmt.Println(getInt());
}
